--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dev7houssam.github.io/App-Contacte",
+  "homepage": "https://dev7hossam.github.io/App-Contacte/",
   "name": "contact",
   "version": "0.1.0",
   "private": true,
